backend/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: microservices
  labels:
    app: backend
  annotations:
    prometheus.io/scrape: "true"  # Enable Prometheus scraping
    prometheus.io/path: "/actuator/prometheus"  # Metrics endpoint
    prometheus.io/port: "8080"  # Port exposed by the app
spec:
  selector:
    app: backend  # Must match the labels in your Deployment
  ports:
    - protocol: TCP
      port: 8080  # Port exposed by the Service
      targetPort: 8089 # Port your Spring Boot app is running on
